8031580: bootcycle-images crashes with Unrecognized VM option 'PermSize=32m'
Reviewed-by: sla, tbell